--- a/.github/workflows/ci-cd-app.yml
+++ b/.github/workflows/ci-cd-app.yml
@@ -99,7 +99,7 @@ jobs:
 
       - name: Install gke-gcloud-auth-plugin
         run: |
-          curl -f https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
           REPO_URL="https://packages.cloud.google.com/apt"
 
           echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] $REPO_URL cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list >/dev/null
