--- a/.github/workflows/ci-cd-app.yml
+++ b/.github/workflows/ci-cd-app.yml
@@ -101,7 +101,7 @@ jobs:
           echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg][trusted=yes] $REPO_URL cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list >/dev/null
           sudo wget -q https://packages.cloud.google.com/apt/doc/apt-key.gpg -O /usr/share/keyrings/cloud.google.gpg
 
-          sudo apt-get update -y --allow-unauthenticated
+          sudo apt-get update -y --allow-insecure-repositories
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Set up Cloud SDK
