--- a/.github/workflows/ci-cd-app.yml
+++ b/.github/workflows/ci-cd-app.yml
@@ -102,7 +102,7 @@ jobs:
           sudo wget -q https://packages.cloud.google.com/apt/doc/apt-key.gpg -O /usr/share/keyrings/cloud.google.gpg
 
           sudo apt-get update -y --allow-insecure-repositories
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin --allow-unauthenticated
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
