--- a/.github/workflows/ci-cd-app.yml
+++ b/.github/workflows/ci-cd-app.yml
@@ -162,8 +162,8 @@ jobs:
   
       - name: Commit files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "svalera999@gmail.com"
+          git config --local user.name "valery.savoskin"
           git commit -am "Bump docker tag"
 
       - name: Push changes
